--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cmdk": "^1.0.4",
     "lucide-react": "^0.460.0",
     "next": "^15.0.3",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^5.0.0",
